[gd_scene load_steps=6 format=3 uid="uid://yhm0sy077ms"]

[ext_resource type="Script" path="res://scene/editor/editor_main.gd" id="1_4538q"]
[ext_resource type="PackedScene" uid="uid://lau331aol4pc" path="res://scene/grid/Grid.tscn" id="2_ji23c"]
[ext_resource type="PackedScene" uid="uid://bqa3dwbfunnwv" path="res://scene/UI/item.tscn" id="3_ynst2"]
[ext_resource type="Texture2D" uid="uid://b7vgbbboycicp" path="res://resources/sprites/sound_on.tres" id="4_n5vi0"]
[ext_resource type="Texture2D" uid="uid://6g70kibbf02e" path="res://resources/sprites/sound_off.tres" id="5_isddh"]

[node name="editor_main" type="Node2D"]
script = ExtResource("1_4538q")

[node name="Grid" parent="." instance=ExtResource("2_ji23c")]

[node name="Step" type="Button" parent="."]
visible = false
offset_left = 358.0
offset_top = 61.0
offset_right = 495.0
offset_bottom = 111.0
text = "step"

[node name="win_screen" type="Label" parent="."]
visible = false
offset_left = 125.0
offset_top = 109.0
offset_right = 215.0
offset_bottom = 142.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "You won !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lose_screen" type="Label" parent="."]
visible = false
offset_left = 125.0
offset_top = 109.0
offset_right = 215.0
offset_bottom = 142.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "You lost :("
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 255.0
offset_top = 641.0
offset_right = 885.0
offset_bottom = 911.0
size_flags_vertical = 8
metadata/_edit_group_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 70)
layout_mode = 2

[node name="box" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(600, 64)
layout_mode = 2

[node name="item1" parent="VBoxContainer/ScrollContainer/box" instance=ExtResource("3_ynst2")]
layout_mode = 2

[node name="item2" parent="VBoxContainer/ScrollContainer/box" instance=ExtResource("3_ynst2")]
layout_mode = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="box" type="HBoxContainer" parent="VBoxContainer/ScrollContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Serialize" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reload"

[node name="Restart" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Load" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load Seed"

[node name="Eraser" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Eraser"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "level seed"

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="mute" type="TextureButton" parent="."]
offset_left = 1134.0
offset_top = 1.0
offset_right = 1198.0
offset_bottom = 65.0
toggle_mode = true
texture_normal = ExtResource("4_n5vi0")
texture_pressed = ExtResource("5_isddh")
